fix footer alignment

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,17 +1,17 @@
-footer {
+.footer{
+    position: absolute;
+    bottom: 0;
+
     width: 100%;
-    height: 50px;
-    margin: auto;
-}
 
-.footer {
-    margin-top: 110%;
 }
-
 
 .footer__main {
     text-align: center;
     background: rgba(0, 0, 0, 0.9);
+    position: relative;
+    bottom: 0;
+    width: 100%;
 }
 
 .footer__logo {
