--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,17 +1,14 @@
-header {
+.header {
     margin: auto;
     flex: 1 0 auto;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    /* flex-grow: 1; */
+    position: relative;
+    padding-bottom: 10rem;
+    justify-content: center;
+    text-align: center;
 }
-
-/* img {
-    display: block;
-    max-width: 100%;
-    object-fit: cover;
-} */
 
 img {
     width: 100%;
@@ -19,63 +16,44 @@ img {
     -webkit-object-fit: cover;
     -moz-object-fit: cover;
     -o-object-fit: cover;
-    height: 100%;
-}
-
-h1 {
-    background-color: transparent;
-    color: white;
-    font-size: 68px;
-    z-index: 1;
+    height: 100vh;
+    /* position: relative; */
 }
 
 .mandy {
-    position: fixed;
-    top: 12%;
-    width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: local;
-    height: 100vh;
     z-index: -1;
-}
-
-.content {
-    margin: auto;
-    /* flex: 1 0 auto; */
-    /* flex: 1; */
-    /* width: 100%;
-    align-content: center;
-    text-align: center; */
-}
-
-.header__content {
-    position: absolute;
-    min-height: 100vh;
-    top: 50%;
-    text-align: center;
-    /* width: 60%; */
-    /* left: 50%; */
-    /* align-content: center; */
-    /* text-align: center; */
-    font-size: 18px;
+    position: relative;
 }
 
 .name {
-    width: 100%;
-    height: 50vh;
     text-shadow: 2px 2px black;
+    background-color: transparent;
+    color: white;
+    font-size: 68px;
+    z-index: 1;
+    position: absolute; /* this line over-write .header properties*/
+    width: 100%;
+    /* top: 10px; */
+    margin-top: -30%;
 }
 
 .header__message {
     background: rgba(0, 0, 0, 0.8);
-    text-align: center;
 }
 
 .message {
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-top: 1rem;
+    padding: 1%;
+    padding-right: 20%;
+    padding-left: 20%;
+}
+
+.message__title {
+    padding-bottom: 1%;
 }
 
 .grid__container {
