--- a/src/components/portfolio/portfolio3.css
+++ b/src/components/portfolio/portfolio3.css
@@ -1,10 +1,12 @@
 .section {
-    position: absolute;
+    position: relative;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center; 
+    height: 100%;
+    padding-bottom: 10rem;
 }
 
 .portfolio__title {
