--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,8 @@
 }
 
 html, body {
-    height: 100%;
+    min-height: 100vh; 
+    overflow: auto; 
 }
 
 :root {
@@ -29,6 +30,11 @@ html, body {
     --container-width-md: 90%;
     --container-width-sm: 90%;
 }
+#root {
+    position: relative;
+    min-height: 100vh;
+    padding-bottom: 60px;
+}
 
 body {
     font-family: "Old Standard TT", "serif", "sans-serif";
@@ -38,11 +44,14 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    /* position: relative; */
 }
 
 .container {
+    /* position: relative; */
     display: flex;
-    height: 100%;
+    /* height: 100%; */
+    height: calc(100% - 60px);
     width: 100%;
     text-align: center; 
 }
